kubernetes/dev/drupal-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
#  annotations:
#    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: private
  labels:
    app: drupal
    tier: nginx-fpm
    environment: dev
spec:
  selector:
    app: drupal
    tier: nginx-fpm
    environment: dev
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31085
    protocol: TCP
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: drupal
  labels:
    app: drupal
    tier: nginx-fpm
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
      tier: nginx-fpm
      environment: dev
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: drupal
        tier: nginx-fpm
        environment: dev
    spec:
      terminationGracePeriodSeconds: 30
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "php-fpm"
      imagePullSecrets:
      - name: regsecret
      containers:
      - image: "dragosdumi/mysite-nginx:latest"
        imagePullPolicy: "Always"
        name: nginx
        ports:
        - containerPort: 80
          name: drupal
        volumeMounts:
        -
          mountPath: /var/www
          name: shared-volume
          readOnly: false
        - name: drupal-persistent-storage
          mountPath: /var/www/docroot/sites/default/files
          subPath: public-files
        - name: drupal-persistent-storage
          mountPath: /var/www/private-files
          subPath: private-files

      - image: "dragosdumi/mysite-app-image:latest"
        name: php-cli
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
          name: fastcgi
        volumeMounts:
        -
          mountPath: /var/www
          name: shared-volume
          readOnly: false
        -
          name: drupal-persistent-storage
          mountPath: /var/www/docroot/sites/default/files
          subPath: public-files
        -
          name: drupal-persistent-storage
          mountPath: /var/www/private-files
          subPath: private-files

      - image: "dragosdumi/mysite-php-fpm:latest"
        name: php-fpm
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
          name: fastcgi
        volumeMounts:
        -
          mountPath: /var/www
          name: shared-volume
          readOnly: false
        -
          name: drupal-persistent-storage
          mountPath: /var/www/docroot/sites/default/files
          subPath: public-files
        -
          name: drupal-persistent-storage
          mountPath: /var/www/private-files
          subPath: private-files

      volumes:
      - name: drupal-persistent-storage
        persistentVolumeClaim:
          claimName: drupal-pv-claim
      # Ephemeral tmpfs (ramdisk) volume for sharing code.
      - name: shared-volume
        emptyDir: {}
