kubernetes/dev/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: drupal-quickstart.demo #find by running bx cs cluster-get <cluster name>
    http:
      paths:
      - path: /
        backend:
#          serviceName: varnish-svc
          serviceName: nginx
          servicePort: 80
